[package]
name = "hello"
version = "0.1.0"
authors = ["whhc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
amf = "0.3.1"
websocket = "0.26.2"