[package]
name = "hello"
version = "0.1.0"
authors = ["whhc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
# amf = "0.3.1"
websocket = "0.26.2"
futures-timer = "3.0.2"
settimeout = "0.1.2"
futures = "0.3.5"
byteorder = "1.3.4"
# skeletal_animation = "0.39.0"
# deno = "1.2.2"